include/rafx.h

typedef struct RfxBufferImpl* RfxBuffer;
typedef struct RfxTextureImpl* RfxTexture;
typedef struct RfxPipelineImpl* RfxPipeline;
typedef struct RfxCommandListImpl* RfxCommandList;
typedef struct RfxDenoiserImpl* RfxDenoiser;
typedef struct RfxAccelerationStructureImpl* RfxAccelerationStructure;
typedef struct RfxShaderBindingTableImpl* RfxShaderBindingTable;
typedef struct RfxMicromapImpl* RfxMicromap;
typedef struct RfxUpscalerImpl* RfxUpscaler;
typedef struct RfxQueryPoolImpl* RfxQueryPool;
typedef enum {
    RFX_QUERY_TYPE_TIMESTAMP,
    RFX_QUERY_TYPE_OCCLUSION,
} RfxQueryType;
typedef enum {
    RFX_DENOISER_REBLUR_DIFFUSE,
    RFX_DENOISER_REBLUR_DIFFUSE_SPECULAR,
    RFX_DENOISER_RELAX_DIFFUSE,
    RFX_DENOISER_RELAX_DIFFUSE_SPECULAR,
    RFX_DENOISER_SIGMA_SHADOW,
} RfxDenoiserType;
typedef struct {
    float viewToClip[16];
    float viewToClipPrev[16];
    float worldToView[16];
    float worldToViewPrev[16];

    float denoisingRange;        // Distance where denoising stops (e.g., 100.0)
    float viewZScale;            // Scale for ViewZ (usually 1.0)
    float disocclusionThreshold; // Sensitivity to motion (default 0.01)
    bool enableValidation;       // Enable validation texture

    float motionVectorScale[2]; // {1.0f, 1.0f} for UV space
    bool isMotionVectorInWorldSpace;
    float jitter[2];
    float jitterPrev[2];
    uint32_t frameIndex;
    bool resetHistory;
} RfxDenoiserSettings;
typedef struct {
    const char* name;
    float microseconds;
} RfxGpuTimestamp;
typedef struct {
    RfxAccelerationStructureType type;
    RfxBuildASFlags flags;
    uint32_t count;                    // For BLAS: number of geometries; for TLAS: max instance count
    const RfxGeometryDesc* geometries; // BLAS only
} RfxAccelerationStructureDesc;
// Single TLAS instance
typedef struct {
    float transform[3][4]; // Row-major 3x4 matrix
    uint32_t instanceId : 24;
    uint32_t mask : 8;
    uint32_t instanceContributionToHitGroupIndex : 24;
    RfxInstanceFlags flags : 8;
    RfxAccelerationStructure blas;
} RfxInstance;
typedef struct {
    RfxShader shader;
    const RfxShaderGroup* groups;
    uint32_t groupCount;
    uint32_t maxRecursionDepth;
    uint32_t maxPayloadSize;
    uint32_t maxAttributeSize;
    RfxRayTracingPipelineFlags flags;
} RfxRayTracingPipelineDesc;
typedef struct {
    RfxShaderBindingTable sbt;
    uint32_t rayGenIndex;
    uint32_t missIndex;
    uint32_t missCount;
    uint32_t hitIndex;
    uint32_t hitCount;
    uint32_t callableIndex;
    uint32_t callableCount;
} RfxTraceRaysDesc;
typedef struct {
    const RfxMicromapUsage* usages;
    uint32_t usageCount;
    RfxBuildMicromapFlags flags;
} RfxMicromapDesc;
typedef struct {
    RfxMicromap dst;
    RfxBuffer data;
    uint64_t dataOffset;
    RfxBuffer triangleIndices; // RfxMicromapTriangle[]
    uint64_t triangleIndicesOffset;
    RfxBuffer scratch;
    uint64_t scratchOffset;
} RfxBuildMicromapDesc;
typedef enum {
    RFX_UPSCALER_NIS,  // NVIDIA Image Scaling
    RFX_UPSCALER_FSR,  // AMD FSR
    RFX_UPSCALER_XESS, // Intel XeSS
    RFX_UPSCALER_DLSR, // NVIDIA DLSS
    RFX_UPSCALER_DLRR  // NVIDIA Ray Reconstruction
} RfxUpscalerType;
typedef struct {
    RfxUpscalerType type;
    RfxUpscalerMode mode;
    RfxUpscalerFlags flags;
    uint32_t outputWidth;
    uint32_t outputHeight;
    uint8_t preset; // 0 = default
} RfxUpscalerDesc;
typedef struct {
    float scalingFactor;
    float mipBias;
    uint32_t renderWidth;
    uint32_t renderHeight;
    uint32_t outputWidth;
    uint32_t outputHeight;
    uint8_t jitterPhaseCount;
} RfxUpscalerProps;
typedef struct {
    // Resources
    RfxTexture input;  // SRV (required)
    RfxTexture output; // UAV (required)

    // Common guides
    RfxTexture depth;         // SRV
    RfxTexture motionVectors; // SRV
    RfxTexture exposure;      // SRV (optional)
    RfxTexture reactive;      // SRV (optional)

    // DLRR guides (ignored for others)
    RfxTexture normalRoughness;
    RfxTexture diffuseAlbedo;
    RfxTexture specularAlbedo;
    RfxTexture specularMvOrHitT;
    RfxTexture sss; // Subsurface scattering (optional)

    // Common settings
    float sharpness; // [0..1]
    float jitter[2];
    float motionVectorScale[2];
    RfxUpscaleDispatchFlags dispatchFlags;

    // FSR/DLRR settings
    float zNear;
    float zFar;
    float verticalFov;             // Radians
    float viewSpaceToMetersFactor; // FSR only (defaults to 1.0)

    // Row-major 4x4 matrices {Xx, Yx, Zx, 0, ... Tx, Ty, Tz, 1}
    float viewToClip[16];  // Required for FSR, DLRR
    float worldToView[16]; // Required for DLRR
} RfxUpscaleDesc;
typedef enum {
    RFX_LATENCY_MARKER_SIMULATION_START,
    RFX_LATENCY_MARKER_SIMULATION_END,
    RFX_LATENCY_MARKER_RENDER_SUBMIT_START,
    RFX_LATENCY_MARKER_RENDER_SUBMIT_END,
    RFX_LATENCY_MARKER_INPUT_SAMPLE,
} RfxLatencyMarker;
typedef struct {
    uint64_t inputSampleTimeUs;
    uint64_t simulationStartTimeUs;
    uint64_t simulationEndTimeUs;
    uint64_t renderSubmitStartTimeUs;
    uint64_t renderSubmitEndTimeUs;
    uint64_t presentStartTimeUs;
    uint64_t presentEndTimeUs;
    uint64_t driverStartTimeUs;
    uint64_t driverEndTimeUs;
    uint64_t osRenderQueueStartTimeUs;
    uint64_t osRenderQueueEndTimeUs;
    uint64_t gpuRenderStartTimeUs;
    uint64_t gpuRenderEndTimeUs;
} RfxLatencyReport;
// Timestamps
RAFX_API void rfxCmdBeginProfile(RfxCommandList cmd, const char* name);
RAFX_API void rfxCmdEndProfile(RfxCommandList cmd);
RAFX_API uint32_t rfxGetGpuTimestamps(RfxGpuTimestamp* outTimestamps, uint32_t maxCount);
// Occlusion queries
RAFX_API RfxQueryPool rfxCreateQueryPool(RfxQueryType type, uint32_t capacity);
RAFX_API void rfxDestroyQueryPool(RfxQueryPool pool);
RAFX_API void rfxCmdResetQueries(RfxCommandList cmd, RfxQueryPool pool, uint32_t offset, uint32_t count);
RAFX_API void rfxCmdBeginQuery(RfxCommandList cmd, RfxQueryPool pool, uint32_t queryIndex);
RAFX_API void rfxCmdEndQuery(RfxCommandList cmd, RfxQueryPool pool, uint32_t queryIndex);
RAFX_API void
rfxCmdCopyQueries(RfxCommandList cmd, RfxQueryPool pool, uint32_t offset, uint32_t count, RfxBuffer dstBuffer, uint64_t dstOffset);
// Low latency (aka Reflex)
RAFX_API void rfxSetLowLatencyMode(bool enabled, bool boost);
RAFX_API void rfxLatencySleep();
RAFX_API void rfxSetLatencyMarker(RfxLatencyMarker marker);
RAFX_API bool rfxGetLatencyReport(RfxLatencyReport* outReport);
//
// ImGui Extension
//

typedef struct {
    void* const* drawLists;
    uint32_t drawListCount;
    void* const* textures;
    uint32_t textureCount;
    float displayWidth;
    float displayHeight;
    float hdrScale;
    bool linearColor;
} RfxImGuiDrawData;
RAFX_API bool rfxInitImGui();
RAFX_API void rfxShutdownImGui();
RAFX_API void rfxCmdDrawImGui(RfxCommandList cmd, const RfxImGuiDrawData* data);
//
// Denoiser (NRD) Extension
//

RAFX_API RfxDenoiser rfxCreateDenoiser(RfxDenoiserType type, int width, int height);
RAFX_API void rfxDestroyDenoiser(RfxDenoiser denoiser);
// `resources` must be an array of size `RFX_DENOISER_RESOURCE_COUNT`, sparsely populated with NULL where unused.
// `resourceCount` should be `RFX_DENOISER_RESOURCE_COUNT`.
RAFX_API void
rfxCmdDenoise(RfxCommandList cmd, RfxDenoiser denoiser, const RfxDenoiserSettings* settings, RfxTexture* resources, uint32_t resourceCount);
//
// Raytracing extension
//

RAFX_API RfxAccelerationStructure rfxCreateAccelerationStructure(const RfxAccelerationStructureDesc* desc);
RAFX_API void rfxDestroyAccelerationStructure(RfxAccelerationStructure as);
RAFX_API uint32_t rfxGetAccelerationStructureId(RfxAccelerationStructure as);
RAFX_API uint64_t rfxGetAccelerationStructureScratchSize(RfxAccelerationStructure as);
RAFX_API void rfxCmdWriteAccelerationStructureSize(
    RfxCommandList cmd, RfxAccelerationStructure* asArray, uint32_t count, RfxQueryPool pool, uint32_t queryOffset
);
RAFX_API RfxPipeline rfxCreateRayTracingPipeline(const RfxRayTracingPipelineDesc* desc);
RAFX_API RfxShaderBindingTable rfxCreateShaderBindingTable(RfxPipeline pipeline);
RAFX_API void rfxDestroyShaderBindingTable(RfxShaderBindingTable sbt);
// Builds BLAS or TLAS. For TLAS, `instanceBuffer` must be populated via `rfxCmdUploadInstances`
RAFX_API void
rfxCmdBuildAccelerationStructure(RfxCommandList cmd, RfxAccelerationStructure dst, RfxBuffer scratch, RfxBuffer instanceBuffer);
RAFX_API void rfxCmdUploadInstances(RfxCommandList cmd, RfxBuffer dstBuffer, const RfxInstance* instances, uint32_t instanceCount);
RAFX_API void rfxCmdTraceRays(RfxCommandList cmd, const RfxTraceRaysDesc* desc, uint32_t width, uint32_t height, uint32_t depth);
RAFX_API void rfxCmdDispatchRaysIndirect(RfxCommandList cmd, RfxBuffer argsBuffer, uint64_t argsOffset);
RAFX_API RfxMicromap rfxCreateMicromap(const RfxMicromapDesc* desc);
RAFX_API void rfxDestroyMicromap(RfxMicromap micromap);
RAFX_API uint64_t rfxGetMicromapScratchSize(RfxMicromap micromap);
RAFX_API void rfxCmdBuildMicromaps(RfxCommandList cmd, const RfxBuildMicromapDesc* desc);
//
// Upscaling extension
//

RAFX_API bool rfxIsUpscalerSupported(RfxUpscalerType type);
RAFX_API RfxUpscaler rfxCreateUpscaler(const RfxUpscalerDesc* desc);
RAFX_API void rfxDestroyUpscaler(RfxUpscaler upscaler);
RAFX_API void rfxGetUpscalerProps(RfxUpscaler upscaler, RfxUpscalerProps* outProps);
RAFX_API void rfxCmdUpscale(RfxCommandList cmd, RfxUpscaler upscaler, const RfxUpscaleDesc* desc);