bindings/rafx-odin/rafx.odin

	cmd_marker :: proc(cmd: CommandList, name: cstring) ---
	@(link_name="rfxCmdBeginProfile")
	cmd_begin_profile :: proc(cmd: CommandList, name: cstring) ---
	@(link_name="rfxCmdEndProfile")
	cmd_end_profile :: proc(cmd: CommandList) ---
	@(link_name="rfxGetGpuTimestamps")
	get_gpu_timestamps :: proc(out_timestamps: ^GpuTimestamp, max_count: u32) -> u32 ---
	@(link_name="rfxCreateQueryPool")
	create_query_pool :: proc(type_: QueryType, capacity: u32) -> QueryPool ---
	@(link_name="rfxDestroyQueryPool")
	destroy_query_pool :: proc(pool: QueryPool) ---
	@(link_name="rfxCmdResetQueries")
	cmd_reset_queries :: proc(cmd: CommandList, pool: QueryPool, offset: u32, count: u32) ---
	@(link_name="rfxCmdBeginQuery")
	cmd_begin_query :: proc(cmd: CommandList, pool: QueryPool, query_index: u32) ---
	@(link_name="rfxCmdEndQuery")
	cmd_end_query :: proc(cmd: CommandList, pool: QueryPool, query_index: u32) ---
	@(link_name="rfxCmdCopyQueries")
	cmd_copy_queries :: proc(cmd: CommandList, pool: QueryPool, offset: u32, count: u32, dst_buffer: Buffer, dst_offset: u64) ---
	@(link_name="rfxSetLowLatencyMode")
	set_low_latency_mode :: proc(enabled: bool, boost: bool) ---
	@(link_name="rfxLatencySleep")
	latency_sleep :: proc() ---
	@(link_name="rfxSetLatencyMarker")
	set_latency_marker :: proc(marker: LatencyMarker) ---
	@(link_name="rfxGetLatencyReport")
	get_latency_report :: proc(out_report: ^LatencyReport) -> bool ---
	@(link_name="rfxInitImGui")
	init_im_gui :: proc() -> bool ---
	@(link_name="rfxShutdownImGui")
	shutdown_im_gui :: proc() ---
	@(link_name="rfxCmdDrawImGui")
	cmd_draw_im_gui :: proc(cmd: CommandList, data: ^ImGuiDrawData) ---
	@(link_name="rfxCreateDenoiser")
	create_denoiser :: proc(type_: DenoiserType, width: i32, height: i32) -> Denoiser ---
	@(link_name="rfxDestroyDenoiser")
	destroy_denoiser :: proc(denoiser: Denoiser) ---
	@(link_name="rfxCmdDenoise")
	cmd_denoise :: proc(cmd: CommandList, denoiser: Denoiser, settings: ^DenoiserSettings, resources: ^Texture, resource_count: u32) ---
	@(link_name="rfxCreateAccelerationStructure")
	create_acceleration_structure :: proc(desc: ^AccelerationStructureDesc) -> AccelerationStructure ---
	@(link_name="rfxDestroyAccelerationStructure")
	destroy_acceleration_structure :: proc(as: AccelerationStructure) ---
	@(link_name="rfxGetAccelerationStructureId")
	get_acceleration_structure_id :: proc(as: AccelerationStructure) -> u32 ---
	@(link_name="rfxGetAccelerationStructureScratchSize")
	get_acceleration_structure_scratch_size :: proc(as: AccelerationStructure) -> u64 ---
	@(link_name="rfxCmdWriteAccelerationStructureSize")
	cmd_write_acceleration_structure_size :: proc(cmd: CommandList, as_array: ^AccelerationStructure, count: u32, pool: QueryPool, query_offset: u32) ---
	@(link_name="rfxCreateRayTracingPipeline")
	create_ray_tracing_pipeline :: proc(desc: ^RayTracingPipelineDesc) -> Pipeline ---
	@(link_name="rfxCreateShaderBindingTable")
	create_shader_binding_table :: proc(pipeline: Pipeline) -> ShaderBindingTable ---
	@(link_name="rfxDestroyShaderBindingTable")
	destroy_shader_binding_table :: proc(sbt: ShaderBindingTable) ---
	@(link_name="rfxCmdBuildAccelerationStructure")
	cmd_build_acceleration_structure :: proc(cmd: CommandList, dst: AccelerationStructure, scratch: Buffer, instance_buffer: Buffer) ---
	@(link_name="rfxCmdUploadInstances")
	cmd_upload_instances :: proc(cmd: CommandList, dst_buffer: Buffer, instances: ^Instance, instance_count: u32) ---
	@(link_name="rfxCmdTraceRays")
	cmd_trace_rays :: proc(cmd: CommandList, desc: ^TraceRaysDesc, width: u32, height: u32, depth: u32) ---
	@(link_name="rfxCmdDispatchRaysIndirect")
	cmd_dispatch_rays_indirect :: proc(cmd: CommandList, args_buffer: Buffer, args_offset: u64) ---
	@(link_name="rfxCreateMicromap")
	create_micromap :: proc(desc: ^MicromapDesc) -> Micromap ---
	@(link_name="rfxDestroyMicromap")
	destroy_micromap :: proc(micromap: Micromap) ---
	@(link_name="rfxGetMicromapScratchSize")
	get_micromap_scratch_size :: proc(micromap: Micromap) -> u64 ---
	@(link_name="rfxCmdBuildMicromaps")
	cmd_build_micromaps :: proc(cmd: CommandList, desc: ^BuildMicromapDesc) ---
	@(link_name="rfxIsUpscalerSupported")
	is_upscaler_supported :: proc(type_: UpscalerType) -> bool ---
	@(link_name="rfxCreateUpscaler")
	create_upscaler :: proc(desc: ^UpscalerDesc) -> Upscaler ---
	@(link_name="rfxDestroyUpscaler")
	destroy_upscaler :: proc(upscaler: Upscaler) ---
	@(link_name="rfxGetUpscalerProps")
	get_upscaler_props :: proc(upscaler: Upscaler, out_props: ^UpscalerProps) ---
	@(link_name="rfxCmdUpscale")
	cmd_upscale :: proc(cmd: CommandList, upscaler: Upscaler, desc: ^UpscaleDesc) ---
}